fix icon alignment

--- a/src/modules/blocks/event-links/style.pcss
+++ b/src/modules/blocks/event-links/style.pcss
@@ -25,6 +25,7 @@
 
 	svg {
 		margin-right: 7px;
+		margin-bottom: 2px;
 	}
 }
 
